correct z-index for goHomeButton

--- a/MAIN/index.css
+++ b/MAIN/index.css
@@ -27,6 +27,7 @@ body {
   left: 5vw;
   width: 10vh;
   height: 10vh;
+  z-index: 10;
 }
 
 .showGoHome2 {
